--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     </head>
     <body style="background-color:#e0b860;"> 
         <h4> Imanthoc's little corner of the internet</h4>
+        <div class="flex-container">
         <div class="menu">
             <a href="index.html" class="menulink">Main</a>
             <a href="about.html" class="menulink">About</a>
         </div>
-        
+            
         <div class="main">
             <center>
                 <p> 
@@ -21,8 +22,9 @@
             </center>
             <p>
             This website is my liitle corner of the internet, I like making and posting stuff about c++ programming and coding on vintage computers and consoles. <br /><br />
-            If this is your cup of tea, feel free to explore..
+                If this is your cup of tea, feel free to explore..
             </p>
+        </div>
         </div>
     </body>
 </html>
