fix a lot of sht

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<DOCTYPE html!>
+<!DOCTYPE html>
 <html>
     <head>
         <title>
@@ -9,22 +9,25 @@
     <body style="background-color:#e0b860;"> 
         <h4> Imanthoc's little corner of the internet</h4>
         <div class="flex-container">
-        <div class="menu">
-            <a href="index.html" class="menulink">Main</a>
-            <a href="about.html" class="menulink">About</a>
-        </div>
-            
-        <div class="main">
-            <center>
-                <p> 
-                    Hi & Welcome. <br /> <br />
-                </p>
-            </center>
-            <p>
-            This website is my liitle corner of the internet, I like making and posting stuff about c++ programming and coding on vintage computers and consoles. <br /><br />
-                If this is your cup of tea, feel free to explore..
-            </p>
-        </div>
+            <div class="row">
+                <div class="menu">
+                    <a href="index.html" class="menulink">Main</a>
+                    <a href="personal.html" class="menulink">Personal Projects</a>
+                    <a href="about.html" class="menulink">About</a>
+                </div>
+
+                <div class="main">
+                    <center>
+                        <p style="text-align:center; font-weight: bold;">
+                            Hi & Welcome. <br /> <br />
+                        </p>
+                    </center>
+                    <p>
+                    This website is my liitle corner of the internet, I like making and posting stuff about c++ programming and coding on vintage computers and consoles. <br /><br />
+                        If this is your cup of tea, feel free to explore..
+                    </p>
+                </div>
+            </div>
         </div>
     </body>
 </html>
