change osc and mult pos

--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
                         <ul>
                             <li>HDL: Verilog</li>
                             <li>Platforms: STM32 Nucleo, Arduino, Raspberry PI</li>
-                            <li>Multimeter, Soldering, Oscilloscope, Breadboard-PCB</li>
+                            <li>Oscilloscope, Multimeter, Soldering, Breadboard-PCB</li>
                             <li>General Analog & Digital Electronics</li>
                         </ul>
                         <li>Others: GCC-GDB, Linux, OpenGL</li>
