fix pp page responsiveness

--- a/personal.html
+++ b/personal.html
@@ -17,7 +17,7 @@
                     <a href="about.html" class="menulink">About</a>
                 </div>
                 
-                <div class="main">
+                <div class="pp-main">
                     <p style="text-align:center; font-weight: bold;">Personal Projects</p>
                     <ul>
                         <li>
