--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
         
         <div class="flex-container">
             <div class="row">
-                <div class="item menu">
+                <div class="menu">
                     <a href="index.html" class="menulink">Main</a>
                     <a href="personal.html" class="menulink">Personal Projects</a>
                     <a href="about.html" class="menulink">About</a>
