black panel on pp page

--- a/personal.html
+++ b/personal.html
@@ -17,24 +17,30 @@
                     <a href="about.html" class="menulink">About</a>
                 </div>
                 
-                <div class="pp-main">
-                    <p style="text-align:center; font-weight: bold;">Personal Projects</p>
-                    <ul>
-                        <li>
-                            <a href="https://github.com/imanthoc/TerminalCade">Text-Terminal based arcade like game, C++ & ncurses</a> <br />
-                            <center>
-                            <img style="height: 450px" src="imgs/tarc1.png" />
-                            <img style="height: 450px" src="imgs/tarc2.png" /> <br />
-                            </center>
-                        </li>
-                        <li>
-                            <a href="https://github.com/imanthoc/Genesis">Roguelike game for the Sega Genesis, C & SGDK</a> <br/>
-                            <center>
-                            <img style="max-width: 600px" src="imgs/g1.png" />
-                            <img style="max-width: 600px" src="imgs/g2.png" /> <br />
-                            </center>
-                        </li>
-                    </ul>
+                <div style="black" class="pp-main">
+                    <p style="text-align:center; font-weight: bold; color: white;">Personal Projects</p>
+
+                    <hr>
+                    <a style="color: blue;" href="https://github.com/imanthoc/TerminalCade">Text-Terminal based arcade like game, C++ & ncurses</a> <br />
+                    <center>
+                    <img style="height: 450px" src="imgs/tarc1.png" />
+                    <img style="height: 450px" src="imgs/tarc2.png" /> <br />
+                    </center>
+
+                    <hr>
+                    <a style="color: blue;" href="https://github.com/imanthoc/Genesis">Roguelike game for the Sega Genesis, C & SGDK</a> <br/>
+                    <center>
+                    <img style="max-width: 600px" src="imgs/g1.png" />
+                    <img style="max-width: 600px" src="imgs/g2.png" /> <br />
+                    </center>
+
+                    <hr>
+                    <a style="color: blue;" href="https://github.com/imanthoc/Mine-Alley">Adventure game demo, C++ & SFML</a> <br/>
+                    <center>
+                    <img style="max-width: 600px" src="imgs/m1.png" />
+                    <img style="max-width: 600px" src="imgs/m2.png" /> <br />
+                    <img style="max-width: 600px" src="imgs/m3.png" /> <br />
+                    </center>
                 </div>
             </div>
         </div>
