hot fix for bs browser stuff

--- a/personal.html
+++ b/personal.html
@@ -17,7 +17,7 @@
                     <a href="about.html" class="menulink">About</a>
                 </div>
                 
-                <div style="black" class="pp-main">
+                <div class="pp-main">
                     <p style="text-align:center; font-weight: bold; color: white;">Personal Projects</p>
 
                     <hr>
